Fixed issue with innfo modal overflowing on smaller devices

--- a/react-app/src/components/GamePage/GamePage.css
+++ b/react-app/src/components/GamePage/GamePage.css
@@ -466,7 +466,7 @@ li {
 .how-to-overlay {
 	position: absolute;
 	width: 100%;
-	height: 100vh;
+	height: inherit;
 	left: 0;
 	display: flex;
 	justify-content: center;
